test: 포트폴리오 평가 컨테이너 테스트 추가